# Circuit-Simulations

./: .gitignore  README.md  dp-report1.ipynb  dynamic-phasor-sim.ipynb
04-Framework/: README.md  SETUP_GUIDE.md  fix_environment.sh  pyproject.toml
04-Framework/docs/: APEC_RECOMMENDATIONS.md
04-Framework/dynamic_phasor_LTspice/: LTSPICE_COMPARISON_GUIDE.md  QUICKSTART_LTSPICE.md  README.md  demo_ltspice_comparison.py  framework_output.raw  rim2025_phasor_domain.raw  rim2025_time_domain.raw
04-Framework/dynamic_phasor_LTspice/core/: __init__.py  circuit.py  components.py  ltspice_comparison.py  mna_circuit.py
04-Framework/dynamic_phasor_LTspice/ltspice_circuits/: README.md  rim2025_rlc_parametric.cir  rim2025_rlc_step_response.cir
04-Framework/notebooks/: 02_rim2025_validation.ipynb  03_ml_hybrid_switching.ipynb  04-rl_switching.py  04_rl_optimal_rules.ipynb  04_rl_optimal_rules_OPTIMIZED.py  05_rl_optimal_rules_extended.ipynb  06_method_comparison_over_time_revised.ipynb  07_timing_and_parameter_sweep_revised.ipynb  08_event_driven_hybrid_algorithm.ipynb  09_circuitSim.ipynb  PASTE_INTO_NOTEBOOK.md  QUICK_FIX_CELL_11.txt  Q_factor_results.csv  README_NOTEBOOK_07.md  README_REVISED_NOTEBOOK.md  apec_paper_results.csv  apec_paper_table.tex  event_driven_results.json  event_driven_summary.csv  extended_optimization_results.json  frequency_results.csv  ml_vs_baseline_comparison.csv  optimal_switching_rules.py  optimization_results.json  parameter_sensitivity_results.json  threshold_sensitivity.csv  timing_benchmarks.csv  validation_results.json
04-Framework/src/dynamic_phasor/benchmarks/: __init__.py
04-Framework/tests/: test_phasor.py
CS_library/: README.md  circuitsim.ipynb
DynamicPhasors/: dp-report1.ipynb
MNA/: README.md  mna.ipynb  mna_sim.ipynb  simulation.py
MNA/Trapezoidal/: README.md  rlc_integrators_comparison.py  trapezoidal_area_demo.py
framework/: README.md  SETUP_GUIDE.md  requirements.txt
framework/dynamic_phasor_LTspice/: LTSPICE_COMPARISON_GUIDE.md  QUICKSTART_LTSPICE.md  README.md  __init__.py  validate_against_ltspice.py  validate_ltspice_rim2025.py
framework/tests/: test_phasor.py
mna-analysis/: README.md  comparison.py  mna_dp_error.ipynb  mna_sim.ipynb  simulation.py  test_dc.py
theory/: README.md  dynamic-phasor-sim.ipynb
(+26 files in other folders)
